--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,59 @@
-<div class="container-fluid">
-  <div class="row" style="border: solid 1px black; border-radius: 10px; max-width: 400px; padding: 0px">
-    <div class="col-sm">{{ filterargs[0] }}</div>
-    <div class="col-sm">{{ filterargs[1] }}</div>
-    <div class="col-sm">{{ filterargs[2] }}</div>
-    <div class="col-sm">{{ filterargs[3] }}</div>
-  </div>
-  <div class="d-flex">
-    <div class="my-4">
-      <app-row *ngFor="let user of data.users | filter: filterargs[0]" [user]="user"></app-row>
-    </div>
-    <div class="my-4">
-      <app-row *ngFor="let user of data.users | filter: filterargs[1]" [user]="user"></app-row>
-    </div>
-    <div class="my-4">
-      <app-row *ngFor="let user of data.users | filter: filterargs[2]" [user]="user"></app-row>
-    </div>
-    <div class="my-4">
-      <app-row *ngFor="let user of data.users | filter: filterargs[3]" [user]="user"></app-row>
-    </div>
-  </div>
+<div class="container"  style="max-width: 400px">
+  <ul class="nav nav-tabs" id="myTab" role="tablist">
+    <li class="nav-item">
+      <a
+        class="nav-link"
+        id="navigator-tab"
+        data-toggle="tab"
+        routerLinkActive="active"
+        role="tab"
+        aria-selected="false"
+        [routerLink]="['navigator']"
+        [queryParams]="{ tab: 0 }"
+        >{{ filterargs[0] }}</a
+      >
+    </li>
+    <li class="nav-item">
+      <a
+        class="nav-link"
+        id="navigator-tab"
+        data-toggle="tab"
+        routerLinkActive="active"
+        [routerLink]="['navigator']"
+        [queryParams]="{ tab: 1 }"
+        role="tab"
+        aria-controls="contact"
+        aria-selected="false"
+        >{{ filterargs[1] }}</a
+      >
+    </li>
+    <li class="nav-item">
+      <a
+        class="nav-link"
+        id="navigator-tab"
+        data-toggle="tab"
+        routerLinkActive="active"
+        [routerLink]="['navigator']"
+        [queryParams]="{ tab: 2 }"
+        role="tab"
+        aria-controls="contact"
+        aria-selected="false"
+        >{{ filterargs[2] }}</a
+      >
+    </li>
+    <li class="nav-item">
+      <a
+        class="nav-link"
+        id="navigator-tab"
+        data-toggle="tab"
+        routerLinkActive="active"
+        [routerLink]="['navigator']"
+        [queryParams]="{ tab: 3 }"
+        role="tab"
+        aria-selected="false"
+        >{{ filterargs[3] }}</a
+      >
+    </li>
+  </ul>
+  <router-outlet></router-outlet>
 </div>
