--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,5 +1,5 @@
 <table class="table">
-  <thead class="thead-dark">
+  <thead class="bg-primary" style="color: #fff">
     <tr>
       <th scope="col">Name</th>
       <th scope="col">Account</th>
@@ -12,4 +12,3 @@
     </tr>
   </tbody>
 </table>
-
