refactor: change styles

--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,4 +1,4 @@
-<table class="table">
+<table class="table table-hover">
   <thead class="bg-primary" style="color: #fff">
     <tr>
       <th scope="col">Name</th>
