--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="max-width: 400px">
+<div class="container mt-3" style="max-width: 400px">
   <ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item" *ngFor="let filter of filterargs; index as i">
       <a
