refactor: change tab styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="container mt-3" style="max-width: 400px">
-  <ul class="nav nav-tabs" id="myTab" role="tablist">
+  <ul class="nav nav-tabs flex-nowrap justify-content-between" id="myTab" role="tablist">
     <li class="nav-item" *ngFor="let filter of filterargs; index as i">
       <a
-        class="nav-link"
+        class="nav-link px-1 px-sm-3"
         id="navigator-tab"
         data-toggle="tab"
         routerLinkActive="active"
